--- a/login.html
+++ b/login.html
@@ -67,15 +67,17 @@
 
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyDO7yFIllU3udhAtJP0f6wFu7QvsXXzP1o",
-    authDomain: "ksp-traffic-control-ff5ac.firebaseapp.com",
-    projectId: "ksp-traffic-control-ff5ac",
-    storageBucket: "ksp-traffic-control-ff5ac.appspot.com",
-    messagingSenderId: "307072623604",
-    appId: "1:307072623604:web:62ee9977aa9634bece0fa1",
-    measurementId: "G-TYW5L6YZNW"
-  };
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDO7yFIllU3udhAtJP0f6wFu7QvsXXzP1o",
+  authDomain: "ksp-traffic-control-ff5ac.firebaseapp.com",
+  databaseURL: "https://ksp-traffic-control-ff5ac-default-rtdb.firebaseio.com",
+  projectId: "ksp-traffic-control-ff5ac",
+  storageBucket: "ksp-traffic-control-ff5ac.firebasestorage.app",
+  messagingSenderId: "307072623604",
+  appId: "1:307072623604:web:62ee9977aa9634bece0fa1",
+  measurementId: "G-TYW5L6YZNW"
+};
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
